fix sidebar glitching into content on small pages: always show sidebar

--- a/content/css/_base.scss
+++ b/content/css/_base.scss
@@ -383,7 +383,8 @@ hr, figure, aside, table, article table {
   font-weight: bold;
 }
 
-#toc { display: none; } // No ToC on mobile
+#sidebar { display: none; } // No sidebar on mobile
+
 #toc {
   --border-width: 2px;
 
@@ -427,15 +428,10 @@ hr, figure, aside, table, article table {
 @media only screen and (min-width: $large-breakpoint) {
   .content-container {
     display: grid;
-    grid-template-columns: [content-start sidebar-start] repeat(4, minmax(min(7rem, 20vw), 1fr)) [sidebar-end content-end];
+    grid-template-columns: [content-start] repeat(4, minmax(min(7rem, 15vw), 1fr)) [content-end sidebar-start] repeat(2, minmax(min(5rem, 8vw), 1fr)) [sidebar-end];
     grid-column-gap: clamp(0.5rem, 3vw, 2rem);
     margin-inline: auto;
     padding-inline: var(--block-padding, 0.5rem);
-    max-width: 38rem;
-  }
-
-  .has-toc .content-container {
-    grid-template-columns: [content-start] repeat(4, minmax(min(7rem, 15vw), 1fr)) [content-end sidebar-start] repeat(2, minmax(min(5rem, 8vw), 1fr)) [sidebar-end];
     max-width: var(--content-width);
   }
 
@@ -443,6 +439,7 @@ hr, figure, aside, table, article table {
     grid-area: content;
   }
   #sidebar {
+    display: block;
     grid-area: sidebar;
     padding-top: $vrhythm;
   }
